-
Bug
-
Resolution: Done
-
P4: Low
-
5.5.1
-
Windows 10
-
910f719bd111813f37278b67d07f9d12cb03a4ff (qtbase/5.6, 29.1.2016, 5.6)
To reproduce, run attached example on Windows with username for example: "gröp☻"
Output:
("/qtbug-example")
Expected at least:
("C:/users/gröp☻/AppData/Local/qtbug-example")
Customer reported HЎυφ
#1 U+0048 'H' category=Letter_Uppercase script=Script_Latin(3) direction=DirL joiningType=Joining_None decomposition=NoDecomposition version=Unicode_1_1 #2 U+040E 'Ў' script=Script_Cyrillic(5) decomposition=Canonical #3 U+03C5 'υ' category=Letter_Lowercase script=Script_Greek(4) decomposition=NoDecomposition #4 U+03C6 'φ' t += QChar(0x48); t += QChar(0x40e); t += QChar(0x3c5); t += QChar(0x3c6);
- relates to
-
QTBUG-56856 Win: licheck does not find license file if username is Cyrillic
-
- Closed
-
| For Gerrit Dashboard: QTBUG-50570 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 147042,2 | QStandardPaths/Windows: Handle failure of SHGetSpecialFolderPath(). | 5.6 | qt/qtbase | Status: ABANDONED | -2 | 0 |
| 147372,3 | Refactor QStandardPaths for Desktop Windows. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 153166,2 | Introduce separate mapping of QStandardPaths's CLSIDs for Windows CE. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 175649,8 | QSettings: Replace deprecated Win32 SHGetSpecialFolderPath | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 175650,6 | QStandardPaths: Replace deprecated Win32 SHGetSpecialFolderPath | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |